added upto 10th question

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!-- <script src="functionExpression.js"></script> -->
     <!-- <script src="FirstClassFunction.js"></script> -->
     <!-- <script src="WhatisIIFE.js"></script> -->
-    <script src="FunctionScope.js"></script>
+    <!-- <script src="FunctionScope.js"></script> -->
+    <!-- <script src="FunctionScopeOPBasedQuestion.js"></script> -->
+    <!-- <script src="FunctionHoisting.js"></script> -->
+    <!-- <script src="FunctionHoistingOPBasedQuestion.js"></script> -->
+    <script src="Paramsv/sArguments.js"></script>
 </body>
 </html>
