--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>JS Practise Questions Theory + Questions</h1>
     <!-- <script src="functionBasic.js"></script> -->
     <!-- <script src="functionExpression.js"></script> -->
     <!-- <script src="FirstClassFunction.js"></script> -->
@@ -15,6 +15,9 @@
     <!-- <script src="FunctionScopeOPBasedQuestion.js"></script> -->
     <!-- <script src="FunctionHoisting.js"></script> -->
     <!-- <script src="FunctionHoistingOPBasedQuestion.js"></script> -->
-    <script src="Paramsv/sArguments.js"></script>
+    <!-- <script src="Paramsv/sArguments.js"></script> -->
+    <!-- <script src="Paramsv/sArgumentsOPBasedQuestion.js"></script> -->
+    <!-- <script src="CallbackFunctions.js"></script> -->
+    <script src="ArrowFunctions.js"></script>
 </body>
 </html>
