--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JS Practise Questions Theory + Questions</h1>
+    <h1 style="text-align: center;">JS Practise Questions Theory + Questions</h1>
     <!-- <script src="functionBasic.js"></script> -->
     <!-- <script src="functionExpression.js"></script> -->
     <!-- <script src="FirstClassFunction.js"></script> -->
