--- a/Closures/index.html
+++ b/Closures/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1 style="text-align: center;">JS Practise Questions Theory + Questions</h1>
    
-    <script src="Closures.js"></script>
+    <!-- <script src="Closures.js"></script> -->
+    <script src="closureExample.js.js"></script>
 </body>
 </html>
