upto Closures chain done

--- a/Closures/index.html
+++ b/Closures/index.html
@@ -9,6 +9,7 @@
     <h1 style="text-align: center;">JS Practise Questions Theory + Questions</h1>
    
     <!-- <script src="Closures.js"></script> -->
-    <script src="closureExample.js.js"></script>
+    <!-- <script src="closureExample.js"></script> -->
+    <script src="closureScopeChain.js"></script>
 </body>
 </html>
