added upto 3 questions of closures

--- a/Closures/index.html
+++ b/Closures/index.html
@@ -10,6 +10,7 @@
    
     <!-- <script src="Closures.js"></script> -->
     <!-- <script src="closureExample.js"></script> -->
-    <script src="closureScopeChain.js"></script>
+    <!-- <script src="closureScopeChain.js"></script> -->
+    <script src="closuresQuestions.js"></script>
 </body>
 </html>
