added upto block scope closure

--- a/Closures/index.html
+++ b/Closures/index.html
@@ -11,6 +11,10 @@
     <!-- <script src="Closures.js"></script> -->
     <!-- <script src="closureExample.js"></script> -->
     <!-- <script src="closureScopeChain.js"></script> -->
-    <script src="closuresQuestions.js"></script>
+    <!-- <script src="closureLoggedCheck.js"></script> -->
+    <!-- <script src="TimeOptimizationQuestionByClosure.js"></script> -->
+    <!-- <script src="FunctionClosure.js"></script> -->
+    <!-- <script src="BlockScopeClosure.js"></script> -->
+    <!-- <script src="PrivateCounterUsingClosure.js"></script> -->
 </body>
 </html>
