PrivateCounterUsingClosure.js is added

--- a/Closures/index.html
+++ b/Closures/index.html
@@ -15,6 +15,6 @@
     <!-- <script src="TimeOptimizationQuestionByClosure.js"></script> -->
     <!-- <script src="FunctionClosure.js"></script> -->
     <!-- <script src="BlockScopeClosure.js"></script> -->
-    <!-- <script src="PrivateCounterUsingClosure.js"></script> -->
+    <script src="PrivateCounterUsingClosure.js"></script>
 </body>
 </html>
