OncePolyfill.js added

--- a/Closures/index.html
+++ b/Closures/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="BlockScopeClosure.js"></script> -->
     <!-- <script src="PrivateCounterUsingClosure.js"></script> -->
     <!-- <script src="ModulePattern.js"></script> -->
-    <script src="MakeThisRunsOnlyOnce.js"></script>
+    <!-- <script src="MakeThisRunsOnlyOnce.js"></script> -->
+    <script src="OncePolyfill.js"></script>
 </body>
 </html>
