added memoizePolyfill.js || Caching or Memoizing

--- a/Closures/index.html
+++ b/Closures/index.html
@@ -18,6 +18,7 @@
     <!-- <script src="PrivateCounterUsingClosure.js"></script> -->
     <!-- <script src="ModulePattern.js"></script> -->
     <!-- <script src="MakeThisRunsOnlyOnce.js"></script> -->
-    <script src="OncePolyfill.js"></script>
+    <!-- <script src="OncePolyfill.js"></script> -->
+    <script src="memoizePolyfill.js"></script>
 </body>
 </html>
