--- a/Closures/index.html
+++ b/Closures/index.html
@@ -19,6 +19,7 @@
     <!-- <script src="ModulePattern.js"></script> -->
     <!-- <script src="MakeThisRunsOnlyOnce.js"></script> -->
     <!-- <script src="OncePolyfill.js"></script> -->
-    <script src="memoizePolyfill.js"></script>
+    <!-- <script src="memoizePolyfill.js"></script> -->
+    <script src="Closure-v/s-Scope-Differnce.js"></script>
 </body>
 </html>
