--- a/Currying/index.html
+++ b/Currying/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1 style="text-align: center;">JS Practise Questions Theory + Questions</h1>
     
-    <script src="currying.js"></script>
+    <!-- <script src="currying.js"></script> -->
+    <script src="whyWeUseCurrying.js"></script>
 </body>
 </html>
