added 1stQuestion of Currying

--- a/Currying/index.html
+++ b/Currying/index.html
@@ -9,6 +9,7 @@
     <h1 style="text-align: center;">JS Practise Questions Theory + Questions</h1>
     
     <!-- <script src="currying.js"></script> -->
-    <script src="whyWeUseCurrying.js"></script>
+    <!-- <script src="whyWeUseCurrying.js"></script> -->
+    <script src="Question1Implementation.js"></script>
 </body>
 </html>
