added 2ndQuestion of Currying

--- a/Currying/index.html
+++ b/Currying/index.html
@@ -10,6 +10,7 @@
     
     <!-- <script src="currying.js"></script> -->
     <!-- <script src="whyWeUseCurrying.js"></script> -->
-    <script src="Question1Implementation.js"></script>
+    <!-- <script src="Question1Implementation.js"></script> -->
+    <script src="Question2Implementation.js"></script>
 </body>
 </html>
