Question3 added of currying

--- a/Currying/index.html
+++ b/Currying/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="currying.js"></script> -->
     <!-- <script src="whyWeUseCurrying.js"></script> -->
     <!-- <script src="Question1Implementation.js"></script> -->
-    <script src="Question2Implementation.js"></script>
+    <!-- <script src="Question2Implementation.js"></script> -->
+    <script src="Question3Implementation.js"></script>
 </body>
 </html>
