--- a/Currying/index.html
+++ b/Currying/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="whyWeUseCurrying.js"></script> -->
     <!-- <script src="Question1Implementation.js"></script> -->
     <!-- <script src="Question2Implementation.js"></script> -->
-    <script src="Question3Implementation.js"></script>
+    <!-- <script src="Question3Implementation.js"></script> -->
+    <script src="Question4Implementation.js"></script>
 </body>
 </html>
