Question5 added of currying

--- a/Currying/index.html
+++ b/Currying/index.html
@@ -8,11 +8,13 @@
 <body>
     <h1 style="text-align: center;">JS Practise Questions Theory + Questions</h1>
     
+    <h1 id="heading">Aman Yadav From TECO</h1>
     <!-- <script src="currying.js"></script> -->
     <!-- <script src="whyWeUseCurrying.js"></script> -->
     <!-- <script src="Question1Implementation.js"></script> -->
     <!-- <script src="Question2Implementation.js"></script> -->
     <!-- <script src="Question3Implementation.js"></script> -->
-    <script src="Question4Implementation.js"></script>
+    <!-- <script src="Question4Implementation.js"></script> -->
+    <script src="Question5Implementation.js"></script>
 </body>
 </html>
