Question6 added of currying

--- a/Currying/index.html
+++ b/Currying/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="Question2Implementation.js"></script> -->
     <!-- <script src="Question3Implementation.js"></script> -->
     <!-- <script src="Question4Implementation.js"></script> -->
-    <script src="Question5Implementation.js"></script>
+    <!-- <script src="Question5Implementation.js"></script> -->
+    <script src="Question6Implementation.js"></script>
 </body>
 </html>
