Q2 initilsied files chnages in html

--- a/DSA-LeetcodeQuestions/index.html
+++ b/DSA-LeetcodeQuestions/index.html
@@ -6,7 +6,9 @@
     <title>DSA Questions of LeetCode</title>
 </head>
 <body>
+    <h1 style="text-align: center;">LeetCode Questions</h1>
     
-    <script src="validPalindrome.js"></script>
+    <!-- <script src="validPalindrome.js"></script> -->
+    <script src="containsDuplicate.js"></script>
 </body>
 </html>
