added question/file bestTimetoBuy&Sellstocks.js

--- a/DSA-LeetcodeQuestions/index.html
+++ b/DSA-LeetcodeQuestions/index.html
@@ -9,6 +9,7 @@
     <h1 style="text-align: center;">LeetCode Questions</h1>
     
     <!-- <script src="validPalindrome.js"></script> -->
-    <script src="containsDuplicate.js"></script>
+    <!-- <script src="containsDuplicate.js"></script> -->
+    <script src="bestTimetoBuy&Sellstocks.js"></script>
 </body>
 </html>
