--- a/DSA-LeetcodeQuestions/index.html
+++ b/DSA-LeetcodeQuestions/index.html
@@ -10,6 +10,7 @@
     
     <!-- <script src="validPalindrome.js"></script> -->
     <!-- <script src="containsDuplicate.js"></script> -->
-    <script src="bestTimetoBuy&Sellstocks.js"></script>
+    <!-- <script src="bestTimetoBuy&Sellstocks.js"></script> -->
+    <script src="two-sum.js"></script>
 </body>
 </html>
