--- a/DSA-LeetcodeQuestions/index.html
+++ b/DSA-LeetcodeQuestions/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="validPalindrome.js"></script> -->
     <!-- <script src="containsDuplicate.js"></script> -->
     <!-- <script src="bestTimetoBuy&Sellstocks.js"></script> -->
-    <script src="two-sum.js"></script>
+    <!-- <script src="two-sum.js"></script> -->
+    <script src="add-two-numbers.js"></script>
 </body>
 </html>
