--- a/DSA-LeetcodeQuestions/index.html
+++ b/DSA-LeetcodeQuestions/index.html
@@ -14,6 +14,7 @@
     <!-- <script src="two-sum.js"></script> -->
     <!-- <script src="add-two-numbers.js"></script> -->
     <!-- <script src="longest-substring-without-repeating-characters.js"></script> -->
-    <script src="longest-substring-without-repeating-characters.js"></script>
+    <!-- <script src="longest-substring-without-repeating-characters.js"></script> -->
+    <script src="longest-palindromic-substring.js"></script>
 </body>
 </html>
