reverse-integer.js added

--- a/DSA-LeetcodeQuestions/index.html
+++ b/DSA-LeetcodeQuestions/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="add-two-numbers.js"></script> -->
     <!-- <script src="longest-substring-without-repeating-characters.js"></script> -->
     <!-- <script src="longest-substring-without-repeating-characters.js"></script> -->
-    <script src="longest-palindromic-substring.js"></script>
+    <!-- <script src="longest-palindromic-substring.js"></script> -->
+    <script src="reverse-integer.js"></script>
 </body>
 </html>
