dtring-to-integer-atoi.js

--- a/DSA-LeetcodeQuestions/index.html
+++ b/DSA-LeetcodeQuestions/index.html
@@ -16,6 +16,7 @@
     <!-- <script src="longest-substring-without-repeating-characters.js"></script> -->
     <!-- <script src="longest-substring-without-repeating-characters.js"></script> -->
     <!-- <script src="longest-palindromic-substring.js"></script> -->
-    <script src="reverse-integer.js"></script>
+    <!-- <script src="reverse-integer.js"></script> -->
+    <script src="string-to-integer-atoi.js"></script>
 </body>
 </html>
